--- a/example/static/global.css
+++ b/example/static/global.css
@@ -1,23 +1,30 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
+  font-feature-settings: 'tnum';
+  background-color: #eefee4;
+  background-image: linear-gradient(45deg, #e0ffde 0%, #fafedd 100%);
+  color: #215200;
 }
 
 button,
 .btn {
-	display: inline-block;
-	box-sizing: content-box;
-	border: 2px solid currentColor;
-	color: currentColor;
-	appearance: none;
-	padding: 4px 6px;
-	line-height: 1.4;
-	background: var(--background-color);
-	box-shadow:
-		2px 2px 0 #FFF inset,
-		-2px -2px 0 rgba(0, 0, 0, .1) inset;
-	cursor: pointer;
-	text-decoration: none;
+  margin: 3px;
+  display: inline-block;
+  box-sizing: content-box;
+  border: 2px solid currentColor;
+  color: currentColor;
+  appearance: none;
+  padding: 4px 6px;
+  line-height: 1.4;
+  background: var(--background-color);
+  box-shadow:
+    2px 2px 0 #FFF inset,
+    -2px -2px 0 rgba(0, 0, 0, .1) inset;
+  cursor: pointer;
+  text-decoration: none;
+  font: inherit
 }
