--- a/example/static/global.css
+++ b/example/static/global.css
@@ -28,3 +28,46 @@ button,
   text-decoration: none;
   font: inherit
 }
+
+
+label {
+  cursor: pointer;
+}
+
+label input[type="checkbox"],
+label input[type="radio"] {
+  display: inline-block;
+  vertical-align: middle;
+  margin: .20em .20em .30em .20em;
+  width: 14px;
+  height: 14px;
+  color: currentColor;
+  border: 2px solid currentColor;
+  -webkit-appearance: none;
+  appearance: none;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+}
+
+label input[type="checkbox"] {
+  border-radius: 0;
+}
+
+label input[type="radio"] {
+  border-radius: 4px;
+}
+
+label input[type="checkbox"]:checked:after,
+label input[type="radio"]:checked:after {
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: currentColor;
+  margin: 1px;
+}
+
+label input[type="radio"]:checked:after {
+  border-radius: 1px;
+}
