--- a/example/static/global.css
+++ b/example/static/global.css
@@ -1,73 +1,116 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  font-family: Arial, Helvetica, sans-serif;
-  font-feature-settings: 'tnum';
-  background-color: #eefee4;
-  background-image: linear-gradient(45deg, #e0ffde 0%, #fafedd 100%);
-  color: #215200;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+	font-family: Arial, Helvetica, sans-serif;
+	font-feature-settings: 'tnum';
+	background-color: #eefee4;
+	background-image: linear-gradient(45deg, #e0ffde 0%, #fafedd 100%);
+	color: #215200;
 }
 
 button,
 .btn {
-  margin: 3px;
-  display: inline-block;
-  box-sizing: content-box;
-  border: 2px solid currentColor;
-  color: currentColor;
-  appearance: none;
-  padding: 4px 6px;
-  line-height: 1.4;
-  background: var(--background-color);
-  box-shadow:
-    2px 2px 0 #FFF inset,
-    -2px -2px 0 rgba(0, 0, 0, .1) inset;
-  cursor: pointer;
-  text-decoration: none;
-  font: inherit
+	margin: 3px;
+	display: inline-block;
+	box-sizing: content-box;
+	border: 2px solid currentColor;
+	color: currentColor;
+	appearance: none;
+	padding: 4px 6px;
+	line-height: 1.4;
+	background: var(--background-color);
+	box-shadow:
+		2px 2px 0 #FFF inset,
+		-2px -2px 0 rgba(0, 0, 0, .1) inset;
+	cursor: pointer;
+	text-decoration: none;
+	font: inherit
 }
 
 
 label {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 label input[type="checkbox"],
 label input[type="radio"] {
-  display: inline-block;
-  vertical-align: middle;
-  margin: .20em .20em .30em .20em;
-  width: 14px;
-  height: 14px;
-  color: currentColor;
-  border: 2px solid currentColor;
-  -webkit-appearance: none;
-  appearance: none;
-  position: relative;
-  z-index: 0;
-  cursor: pointer;
+	display: inline-block;
+	vertical-align: middle;
+	margin: .20em .20em .30em .20em;
+	width: 14px;
+	height: 14px;
+	color: currentColor;
+	border: 2px solid currentColor;
+	-webkit-appearance: none;
+	appearance: none;
+	position: relative;
+	z-index: 0;
+	cursor: pointer;
 }
 
 label input[type="checkbox"] {
-  border-radius: 0;
+	border-radius: 0;
 }
 
 label input[type="radio"] {
-  border-radius: 4px;
+	border-radius: 4px;
 }
 
 label input[type="checkbox"]:checked:after,
 label input[type="radio"]:checked:after {
-  content: '';
-  position: absolute;
-  width: 8px;
-  height: 8px;
-  background: currentColor;
-  margin: 1px;
+	content: '';
+	position: absolute;
+	width: 8px;
+	height: 8px;
+	background: currentColor;
+	margin: 1px;
 }
 
 label input[type="radio"]:checked:after {
-  border-radius: 1px;
+	border-radius: 1px;
+}
+
+/* 20220407 itorr ui */
+input[type="range"] {
+	width: 400px;
+	height: 20px;
+	-webkit-appearance: none;
+	appearance: none;
+	max-width: 100%;
+	margin: 0;
+	display: block;
+	color: inherit;
+	background: none;
+
+	cursor: pointer;
+
+	&::-webkit-slider-runnable-track {
+		-webkit-appearance: none;
+		appearance: none;
+		background: currentColor;
+		height: 2px;
+	}
+
+	&::-webkit-slider-thumb {
+		height: 18px;
+		width: 10px;
+		margin: -8px 0;
+		background: currentColor;
+		border: 2px solid var(--background-color);
+		-webkit-appearance: none;
+		appearance: none;
+		border-radius: 0;
+		box-shadow: none;
+	}
+
+	&:disabled {
+		opacity: .2;
+		cursor: not-allowed;
+
+		&::-webkit-slider-thumb {
+			cursor: not-allowed;
+		}
+	}
 }
